Embedded flow update

--- a/connect.mdx
+++ b/connect.mdx
@@ -3,30 +3,43 @@ title: "Kombo Connect"
 description: "Our interactive embeddable connection flow."
 ---
 
-![1376](/images/ff4117f-Connection_flow.png "Connection flow.png")![1376](/images/ff4117f-Connection_flow.png "Click to close...") 
+![1376](/images/ff4117f-Connection_flow.png "Connection flow.png")![1376](/images/ff4117f-Connection_flow.png "Click to close...")
 
-We know that the experience of setting up new integrations is just as core to your application as the integrations themselves, so we've put special care into making this as easy and user-friendly as possible for your customers.
+We know that the experience of setting up new integrations is just as core to
+your application as the integrations themselves, so we've put special care into
+making this as easy and user-friendly as possible for your customers.
 
-_The best part:_ **Kombo Connect** — that's what we call our interactive connection flow — can be [fully embedded within your own application](/docs/embedded-flow).
+_The best part:_ **Kombo Connect** — that's what we call our interactive
+connection flow — can be
+[fully embedded within your own application](/docs/embedded-flow).
 
 ## How it works
 
-To get a better idea of how Kombo Connect fits into your application, let's take a look at the typical flow a customer will go through:
+To get a better idea of how Kombo Connect fits into your application, let's take
+a look at the typical flow a customer will go through:
 
-1. They **initiate the flow** within your app (e.g., through a "Connect HRIS" button)
-2. They are **presented with the Kombo Connect UI** where they can:  
-   * Select the tool they want to connect (e.g., Factorial)  
-   * Get an overview of the requested data points (see [Scopes](/docs/scopes))  
-   * Grant access to the requested data points  
-   * See which credentials are required to set up the tool and how to get them  
-   * Enter the necessary credentials (e.g., an API key)
+1. They **initiate the flow** within your app (e.g., through a "Connect HRIS"
+   button)
+2. They are **presented with the Kombo Connect UI** where they can:
+   - Select the tool they want to connect (e.g., Factorial)
+   - Get an overview of the requested data points (see [Scopes](/docs/scopes))
+   - Grant access to the requested data points
+   - See which credentials are required to set up the tool and how to get them
+   - Enter the necessary credentials (e.g., an API key)
 3. They **return to your app**, and their integration has been set up
 
 ## Getting started
 
-The flow described above applies to the situation where you've [_embedded_ the Kombo Connect flow](/docs/embedded-flow) into your own app. This provides the most seamless experience but isn't the quickest way to get started.
+The flow described above applies to the situation where you've
+[_embedded_ the Kombo Connect flow](/docs/embedded-flow) into your own app. This
+provides the most seamless experience but isn't the quickest way to get started.
 
-If you just want to try out Kombo quickly and **onboard selected customers**, consider these other options that **don't require any changes to your app**:
+If you just want to try out Kombo quickly and **onboard selected customers**,
+consider these other options that **don't require any changes to your app**:
 
-* **[Manual setup](/docs/manual-setup)** is perfect when you _already have_ the relevant credentials from your customer and just want to add the integration to Kombo.
-* **[Magic links](/docs/magic-links)** are similar in that they also don't require any code, but they still allow your customers to go through the flow and enter the credentials themselves.
+- **[Manual setup](/docs/manual-setup)** is perfect when you _already have_ the
+  relevant credentials from your customer and just want to add the integration
+  to Kombo.
+- **[Magic links](/docs/magic-links)** are similar in that they also don't
+  require any code, but they still allow your customers to go through the flow
+  and enter the credentials themselves.
