--- a/connect.mdx
+++ b/connect.mdx
@@ -11,7 +11,7 @@ making this as easy and user-friendly as possible for your customers.
 
 _The best part:_ **Kombo Connect** — that's what we call our interactive
 connection flow — can be
-[fully embedded within your own application](/docs/embedded-flow).
+[fully embedded within your own application](/embedded-flow).
 
 ## How it works
 
@@ -22,7 +22,7 @@ a look at the typical flow a customer will go through:
    button)
 2. They are **presented with the Kombo Connect UI** where they can:
    - Select the tool they want to connect (e.g., Factorial)
-   - Get an overview of the requested data points (see [Scopes](/docs/scopes))
+   - Get an overview of the requested data points (see [Scopes](/scopes))
    - Grant access to the requested data points
    - See which credentials are required to set up the tool and how to get them
    - Enter the necessary credentials (e.g., an API key)
@@ -31,15 +31,15 @@ a look at the typical flow a customer will go through:
 ## Getting started
 
 The flow described above applies to the situation where you've
-[_embedded_ the Kombo Connect flow](/docs/embedded-flow) into your own app. This
+[_embedded_ the Kombo Connect flow](/embedded-flow) into your own app. This
 provides the most seamless experience but isn't the quickest way to get started.
 
 If you just want to try out Kombo quickly and **onboard selected customers**,
 consider these other options that **don't require any changes to your app**:
 
-- **[Manual setup](/docs/manual-setup)** is perfect when you _already have_ the
+- **[Manual setup](/manual-setup)** is perfect when you _already have_ the
   relevant credentials from your customer and just want to add the integration
   to Kombo.
-- **[Magic links](/docs/magic-links)** are similar in that they also don't
-  require any code, but they still allow your customers to go through the flow
-  and enter the credentials themselves.
+- **[Magic links](/magic-links)** are similar in that they also don't require
+  any code, but they still allow your customers to go through the flow and enter
+  the credentials themselves.
