--- a/embedded-flow.mdx
+++ b/embedded-flow.mdx
@@ -4,12 +4,11 @@ description:
   "Embed Kombo Connect into your app for the most seamless experience."
 ---
 
-If you've gone through the general [Kombo Connect](/docs/connect) documentation,
+If you've gone through the general [Kombo Connect](/connect) documentation,
 you'll know there are
-[different ways of using the flow](/docs/connect#getting-started). Our embedded
-flow provides the most seamless experience to your customers but also involves
-some engineering on your side. In this guide, we'll go over what that means
-exactly.
+[different ways of using the flow](/connect#getting-started). Our embedded flow
+provides the most seamless experience to your customers but also involves some
+engineering on your side. In this guide, we'll go over what that means exactly.
 
 ## Implementing the flow
 
