--- a/webhooks.mdx
+++ b/webhooks.mdx
@@ -13,8 +13,8 @@ Easily test webhooks with [Webhook.site](https://webhook.site/).
 
 ## Enable Webhooks
 
-You can configure your Kombo webhooks in the dashboard directly in
-the[ webhooks tab](https://app.kombo.dev/env/webhooks). After creating the first
+You can configure your Kombo webhooks in the dashboard directly in the
+[webhooks tab](https://app.kombo.dev/env/webhooks). After creating the first
 webhook, a random webhook secret will be generated and shown. Learn in _validate
 the data_ how to use it.
 
