--- a/sync.mdx
+++ b/sync.mdx
@@ -22,9 +22,10 @@ solution — we decided to go with the latter.
 ## The solution
 
 We're now mirroring the data in the source systems into a database at regular
-intervals (and when you [manually trigger a sync](/reference/trigger-sync)).
-When you call our API, we will simply read from this database, resulting in
-endpoints that always respond reliably and quickly.
+intervals (and when you
+[manually trigger a sync](/reference/general/trigger-sync)). When you call our
+API, we will simply read from this database, resulting in endpoints that always
+respond reliably and quickly.
 
 Through our syncing approach, we can also provide [webhooks](/webhooks) for
 systems that don't provide webhooks themselves.
