--- a/reference/unified-ats/get-application-stages.mdx
+++ b/reference/unified-ats/get-application-stages.mdx
@@ -1,4 +1,4 @@
 ---
 title: "Get application stages (depreciated)"
-openapi: "GET /v1/ats/application-stages"
+openapi: "GET /ats/application-stages"
 ---
