--- a/connect.mdx
+++ b/connect.mdx
@@ -1,9 +1,9 @@
 ---
-title: "Kombo Connect"
+title: "Introduction"
 description: "Our interactive embeddable connection flow."
 ---
 
-![1376](/images/ff4117f-Connection_flow.png "Connection flow.png")![1376](/images/ff4117f-Connection_flow.png "Click to close...")
+![1376](/images/ff4117f-Connection_flow.png "Connection flow.png")
 
 We know that the experience of setting up new integrations is just as core to
 your application as the integrations themselves, so we've put special care into
@@ -37,9 +37,13 @@ provides the most seamless experience but isn't the quickest way to get started.
 If you just want to try out Kombo quickly and **onboard selected customers**,
 consider these other options that **don't require any changes to your app**:
 
-- **[Manual setup](/manual-setup)** is perfect when you _already have_ the
-  relevant credentials from your customer and just want to add the integration
-  to Kombo.
-- **[Magic links](/magic-links)** are similar in that they also don't require
-  any code, but they still allow your customers to go through the flow and enter
-  the credentials themselves.
+<CardGroup>
+  <Card title="Manual setup" icon="wrench" href="/manual-setup">
+    Perfect when you _already have_ the relevant credentials from your customer
+    and just want to add the integration to Kombo
+  </Card>
+  <Card title="Magic links" icon="wand-magic-sparkles" href="/magic-links">
+    Similar in that they also don't require any code, but they still allow your
+    customers to go through the flow and enter the credentials themselves.
+  </Card>
+</CardGroup>
