--- a/magic-links.mdx
+++ b/magic-links.mdx
@@ -14,26 +14,36 @@ to change anything about your application.
 To get started, open up [the dashboard](https://app.kombo.dev) and click on "New
 integration":
 
-![1448](/images/59fac1e-503d25a-Screen_Shot_2022-10-07_at_15.59.06.png "503d25a-Screen_Shot_2022-10-07_at_15.59.06.png")![1448](/images/59fac1e-503d25a-Screen_Shot_2022-10-07_at_15.59.06.png "Click to close...")
+<Frame>
+  ![1448](/images/59fac1e-503d25a-Screen_Shot_2022-10-07_at_15.59.06.png
+  "503d25a-Screen_Shot_2022-10-07_at_15.59.06.png")
+</Frame>
 
 Then, select "Let your customer create the integration":
 
-![764](/images/c7addc7-Screen_Shot_2022-10-16_at_16.06.23.png "Screen Shot 2022-10-16 at 16.06.23.png")![764](/images/c7addc7-Screen_Shot_2022-10-16_at_16.06.23.png "Click to close...")
+<Frame>
+  ![764](/images/c7addc7-Screen_Shot_2022-10-16_at_16.06.23.png "Screen Shot
+  2022-10-16 at 16.06.23.png")
+</Frame>
 
 In the next step, select the integration category (e.g., HRIS) and which
 customer it's for:
 
-![1762](/images/3e59034-Connection_settings.png "Connection settings.png")![1762](/images/3e59034-Connection_settings.png "Click to close...")
+<Frame>
+  ![1762](/images/3e59034-Connection_settings.png "Connection settings.png")
+</Frame>
 
 After clicking "Continue," you'll get a link that you can share with your
 customer:
 
-![786](/images/970f391-Magic_link.png "Magic link.png")![786](/images/970f391-Magic_link.png "Click to close...")
+<Frame>![786](/images/970f391-Magic_link.png "Magic link.png")</Frame>
 
 Clicking on this link will take your customer to a special version of the Kombo
 Connect flow hosted by us:
 
-![1376](/images/56677d9-Connection_flow.png "Connection flow.png")![1376](/images/56677d9-Connection_flow.png "Click to close...")
+<Frame>
+  ![1376](/images/56677d9-Connection_flow.png "Connection flow.png")
+</Frame>
 
 After they've gone through the flow, the integration will be set up and you'll
 get a notification via email. You can then start using our unified API. To learn
