--- a/manual-setup.mdx
+++ b/manual-setup.mdx
@@ -13,22 +13,32 @@ Kombo Dashboard.
 To get started, open up [the dashboard](https://app.kombo.dev) and click on "New
 integration":
 
-![1448](/images/2f05916-503d25a-Screen_Shot_2022-10-07_at_15.59.06.png "503d25a-Screen_Shot_2022-10-07_at_15.59.06.png")![1448](/images/2f05916-503d25a-Screen_Shot_2022-10-07_at_15.59.06.png "Click to close...")
+<Frame>
+  ![1448](/images/2f05916-503d25a-Screen_Shot_2022-10-07_at_15.59.06.png
+  "503d25a-Screen_Shot_2022-10-07_at_15.59.06.png")
+</Frame>
 
 Then, select "Create the integration yourself":
 
-![758](/images/59c5b9b-16769a4-Screen_Shot_2022-10-07_at_16.00.06_1.png "16769a4-Screen_Shot_2022-10-07_at_16.00.06 (1).png")![758](/images/59c5b9b-16769a4-Screen_Shot_2022-10-07_at_16.00.06_1.png "Click to close...")
+<Frame>
+  ![758](/images/59c5b9b-16769a4-Screen_Shot_2022-10-07_at_16.00.06_1.png
+  "16769a4-Screen_Shot_2022-10-07_at_16.00.06 (1).png")
+</Frame>
 
 In the next step, select the integration category (e.g., HRIS) and which
 customer it's for:
 
-![1762](/images/4b4feb3-Connection_settings.png "Connection settings.png")![1762](/images/4b4feb3-Connection_settings.png "Click to close...")
+<Frame>
+  ![1762](/images/4b4feb3-Connection_settings.png "Connection settings.png")
+</Frame>
 
 After clicking "Continue," you'll then be presented with the regular
 [Kombo Connect](/connect) flow, except that in this case, it's _you_ going
 through it and not your customer:
 
-![1376](/images/7a6d096-Connection_flow.png "Connection flow.png")![1376](/images/7a6d096-Connection_flow.png "Click to close...")
+<Frame>
+  ![1376](/images/7a6d096-Connection_flow.png "Connection flow.png")
+</Frame>
 
 After going through the flow, the integration will be set up, and you can start
 using our unified API. To learn more about that, check out
