--- a/request-logs.mdx
+++ b/request-logs.mdx
@@ -17,7 +17,10 @@ properties of the request so you can either search for specific status codes,
 URLs, Integration Ids, and Methods. By separating your keywords with a space,
 you can search based on multiple attributes.
 
-![1876](/images/d312132-1bbca588d8ce64278e3450179fde8566640b32b283a585da8385c45bf2529843.png "1bbca588d8ce64278e3450179fde8566640b32b283a585da8385c45bf2529843.png")![1876](/images/d312132-1bbca588d8ce64278e3450179fde8566640b32b283a585da8385c45bf2529843.png "Click to close...")
+<Frame>
+  ![1876](/images/d312132-1bbca588d8ce64278e3450179fde8566640b32b283a585da8385c45bf2529843.png
+  "1bbca588d8ce64278e3450179fde8566640b32b283a585da8385c45bf2529843.png")
+</Frame>
 
 ## Limitations
 
