--- a/scopes.mdx
+++ b/scopes.mdx
@@ -20,7 +20,10 @@ To get started configuring scopes, log into the
 [Kombo Dashboard](https://app.kombo.dev) and open the "Scope Config" page. It
 should look something like this:
 
-![1464](/images/4086397-Screen_Shot_2022-10-09_at_12.04.51.png "Screen Shot 2022-10-09 at 12.04.51.png")![1464](/images/4086397-Screen_Shot_2022-10-09_at_12.04.51.png "Click to close...")
+<Frame>
+  ![1464](/images/4086397-Screen_Shot_2022-10-09_at_12.04.51.png "Screen Shot
+  2022-10-09 at 12.04.51.png")
+</Frame>
 
 ### Configuring models
 
@@ -34,7 +37,10 @@ absences at all.
 If, however, you only want to turn off individual model fields, click on the
 "show more" button of a model. You'll now see all the fields it supports:
 
-![1426](/images/e918b5a-Screen_Shot_2022-10-09_at_12.16.18.png "Screen Shot 2022-10-09 at 12.16.18.png")![1426](/images/e918b5a-Screen_Shot_2022-10-09_at_12.16.18.png "Click to close...")
+<Frame>
+  ![1426](/images/e918b5a-Screen_Shot_2022-10-09_at_12.16.18.png "Screen Shot
+  2022-10-09 at 12.16.18.png")
+</Frame>
 
 If you, for example, don't want to sync employees' date of birth or ethnicity,
 you can turn them off by clicking on the respective toggles.
@@ -49,6 +55,9 @@ building trust and eradicating concerns during the sales process.
 To help you with this, we're exposing your scope config to the end user as part
 of our connection flow:
 
-![1002](/images/65d39f4-Screen_Shot_2022-10-09_at_14.50.50.png "Screen Shot 2022-10-09 at 14.50.50.png")![1002](/images/65d39f4-Screen_Shot_2022-10-09_at_14.50.50.png "Click to close...")
+<Frame>
+  ![1002](/images/65d39f4-Screen_Shot_2022-10-09_at_14.50.50.png "Screen Shot
+  2022-10-09 at 14.50.50.png")
+</Frame>
 
 This way, your customers can see exactly which data points you're accessing.
