--- a/webhooks.mdx
+++ b/webhooks.mdx
@@ -1,7 +1,6 @@
 ---
 title: "Webhooks"
-description:
-  "Kombo sends you webhooks so that you don't have to poll our API for changes."
+description: "Kombo sends you webhooks so that you don't have to poll our API for changes."
 ---
 
 ## Webhook Use Case
@@ -18,7 +17,10 @@ You can configure your Kombo webhooks in the dashboard directly in the
 webhook, a random webhook secret will be generated and shown. Learn in _validate
 the data_ how to use it.
 
-![1412](/images/ac5c217-c093f3c53f5352fad1549cbfd4f9b5a5a1007dc4629e028f601bbf5d8c799e9f.png "c093f3c53f5352fad1549cbfd4f9b5a5a1007dc4629e028f601bbf5d8c799e9f.png")![1412](/images/ac5c217-c093f3c53f5352fad1549cbfd4f9b5a5a1007dc4629e028f601bbf5d8c799e9f.png "Click to close...")
+<Frame>
+  ![1412](/images/ac5c217-c093f3c53f5352fad1549cbfd4f9b5a5a1007dc4629e028f601bbf5d8c799e9f.png
+  "c093f3c53f5352fad1549cbfd4f9b5a5a1007dc4629e028f601bbf5d8c799e9f.png")
+</Frame>
 
 ## Data Schema
 
