Add first two API groups

--- a/reference/general/delete-integration.mdx
+++ b/reference/general/delete-integration.mdx
@@ -1,3 +1,6 @@
 ---
 openapi: "DELETE /integrations/{integration_id}"
+description: "Delete the specified integration."
 ---
+
+<Warning>This can not be undone!</Warning>
