--- a/reference/general/get-integration.mdx
+++ b/reference/general/get-integration.mdx
@@ -1,3 +1,4 @@
 ---
 openapi: "GET /integrations/{integration_id}"
+description: "Get the specified integration with everything you need to display it to your customer."
 ---
