--- a/reference/unified-hris/create-employee.mdx
+++ b/reference/unified-hris/create-employee.mdx
@@ -1,3 +1,4 @@
 ---
 openapi: "POST /hris/employees"
+description: Create a new employee. Requires the permission "Create and manage employees".
 ---
