--- a/reference/unified-hris/delete-absence.mdx
+++ b/reference/unified-hris/delete-absence.mdx
@@ -1,3 +1,4 @@
 ---
 openapi: "DELETE /hris/absences/{absence_id}"
+description: Delete this absence. Requires the permission "Manage absences".
 ---
