--- a/reference/unified-hris/get-teams.mdx
+++ b/reference/unified-hris/get-teams.mdx
@@ -1,4 +1,12 @@
 ---
-title: "Get teams (depreciated)
+title: "Get teams (depreciated)"
 openapi: "GET /hris/teams"
+description: "Returns the same data but the naming makes more sense as the model not only includes teams but also departments and cost centers."
 ---
+
+<Warning>
+  **Deprecated** Please use [the /groups
+  endpoint](https://kombo-staging.readme.io/reference/get_hris-groups) instead.
+</Warning>
+
+_If the first sync did not finish yet, a `503` status code will be returned to ensure you don't get incomplete data. This allows you to pull until the data is complete (we recommend you to depend on our webhooks though)._
