--- a/reference/unified-hris/update-employee.mdx
+++ b/reference/unified-hris/update-employee.mdx
@@ -1,3 +1,4 @@
 ---
 openapi: "PATCH /hris/employees/{employee_id}"
+description: Update an employee. Requires the permission "Create and manage employees".
 ---
