--- a/reference/unified-hris/set-compensations.mdx
+++ b/reference/unified-hris/set-compensations.mdx
@@ -1,3 +1,4 @@
 ---
 openapi: "PUT /hris/employees/{employee_id}/compensations"
+description: Sets the compensations for an employee on the specified effective date. Other compensations will end at the effective date. That means, if you would like to add a compensation, you also have to include the compensations that you would like to keep. Requires the permission "Manage payroll".
 ---
