--- a/reference/custom-endpoints/prepare-datev-payroll.mdx
+++ b/reference/custom-endpoints/prepare-datev-payroll.mdx
@@ -1,3 +1,4 @@
 ---
 openapi: "PUT /custom/datev/employees/{employee_id}/prepare-payroll"
+description: What DATEV requires to prepare payroll is very specific and currently, as DATEV is not providing "read", this is not part of the unified model. Requires the permission "Manage payroll".
 ---
