--- a/reference/kombo-connect/activate-integration.mdx
+++ b/reference/kombo-connect/activate-integration.mdx
@@ -1,3 +1,6 @@
 ---
 openapi: "POST /connect/activate-integration"
+description: "Activate an integration that was just created via Kombo Connect."
 ---
+
+_Check out [our full guide](https://docs.kombo.dev/docs/embedded-flow) for more details about implementing the connection flow._
