--- a/reference/kombo-connect/create-link.mdx
+++ b/reference/kombo-connect/create-link.mdx
@@ -1,3 +1,6 @@
 ---
 openapi: "POST /connect/create-link"
+description: Generate a unique link that allows your user to enter the Kombo Connect flow.
 ---
+
+_Check out [our full guide](https://docs.kombo.dev/docs/embedded-flow) for more details about implementing the connection flow._
