--- a/reference/unified-ats/add-result-link.mdx
+++ b/reference/unified-ats/add-result-link.mdx
@@ -1,3 +1,4 @@
 ---
 openapi: "POST /ats/candidates/{candidate_id}/result-links"
+description: Adds a result link to a candidate. This can, for example, be used to link a candidate back to a test result/assessment in your application. As not all ATS tools have a "result link" feature, we sometimes repurpose other fields to expose it. Requires the permission "Create and manage candidates and applications".
 ---
