--- a/reference/unified-ats/add-tag.mdx
+++ b/reference/unified-ats/add-tag.mdx
@@ -1,3 +1,4 @@
 ---
 openapi: "POST /ats/candidates/{candidate_id}/tags"
+description: Add a tag to a candidate. Kombo takes care of creating the tag if required, finding out the right ID, and appending it to the list of tags. Requires the permission "Create and manage candidates and applications".
 ---
