--- a/reference/unified-ats/create-candidate.mdx
+++ b/reference/unified-ats/create-candidate.mdx
@@ -1,3 +1,4 @@
 ---
 openapi: "POST /ats/candidates"
+description: Create a new candidate and application for the specified job. The first CV in the attachments will be treated as the resume of the candidate when the tool allows previewing a resume. Requires the permission "Create and manage candidates and applications".
 ---
