--- a/reference/unified-ats/remove-tag.mdx
+++ b/reference/unified-ats/remove-tag.mdx
@@ -1,3 +1,4 @@
 ---
 openapi: "DELETE /ats/candidates/{candidate_id}/tags"
+description: Remove a tag from a candidate based on its name. This will also succeed if the tag does not exist on the candidate. Requires the permission "Create and manage candidates and applications".
 ---
