--- a/reference/unified-ats/update-application.mdx
+++ b/reference/unified-ats/update-application.mdx
@@ -1,3 +1,10 @@
 ---
 openapi: "PATCH /ats/applications/{application_id}"
+description: null
 ---
+
+<Note>
+  **🦄 This endpoint is currently in closed beta!** We're testing it with
+  selected customers before its public release. If you're interested in learning
+  more or getting early access, please reach out.
+</Note>
